kubernetes/ok-staging-web-rc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ok-staging-deployment
spec:
  replicas: 1
  strategy:
      type: RollingUpdate
      rollingUpdate:
          maxUnavailable: 75%
  template:
    metadata:
      labels:
        app: staging
    spec:
      containers:
      - name: ok-v3-staging
        image: cs61a/ok-server
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 1
        ports:
        - containerPort: 5000
