kubernetes/ok-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: deploy-web
  name: ok-web-deployment
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 2
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      name: deploy-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: deploy-web
    spec:
      containers:
      - env:
        - name: OK_ENV
          value: prod
        - name: GET_HOSTS_FROM
          value: dns
        - name: REDIS_HOST
          value: redis-master
        - name: SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: key
              name: ok-secrets
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: db
              name: ok-db
        - name: GOOGLE_ID
          valueFrom:
            secretKeyRef:
              key: google-id
              name: ok-login
        - name: GOOGLE_SECRET
          valueFrom:
            secretKeyRef:
              key: google-secret
              name: ok-login
        - name: STORAGE_PROVIDER
          value: GOOGLE_STORAGE
        - name: STORAGE_CONTAINER
          value: ok-v3-user-files
        - name: STORAGE_KEY
          valueFrom:
            secretKeyRef:
              key: storage-key
              name: ok-storage
        - name: STORAGE_SECRET
          valueFrom:
            secretKeyRef:
              key: storage-secret
              name: ok-storage
        - name: SENTRY_DSN
          valueFrom:
            secretKeyRef:
              key: sentry-dsn
              name: ok-services
        - name: SENDGRID_USER
          valueFrom:
            secretKeyRef:
              key: sendgrid-user
              name: ok-services
        - name: SENDGRID_KEY
          valueFrom:
            secretKeyRef:
              key: sendgrid-key
              name: ok-services
        - name: GOOGLE_LOG_NAME
          value: ok-web
        image: cs61a/ok-server
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: ok-v3-deploy
        ports:
        - containerPort: 5000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /db_ssl
          name: db-ssl
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: db-ssl
        secret:
          defaultMode: 420
          secretName: ok-db
status: {}
