kubernetes/ok-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ok-worker-deployment
  labels:
    role: worker
    tier: backend
    app: ok-worker
spec:
  replicas: 3
  strategy: {}
  template:
    metadata:
      labels:
        role: worker
        tier: backend
        app: ok-worker
    spec:
      containers:
      - name: ok-v3-worker
        image: cs61a/ok-server
        imagePullPolicy: Always
        command:
          - ./worker.py
