kubernetes/ok-staging-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok-staging-direct
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30402
      targetPort: 5000
  selector:
    app: staging
