kubernetes/ok-web-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok-direct-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30302
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    name: web
---
apiVersion: v1
kind: Service
metadata:
  name: ok-admin-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30304
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    name: web
---
apiVersion: v1
kind: Service
metadata:
  name: ok-web-static-service
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30303
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    name: web
