kubernetes/ok-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok-web-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    name: web
