kubernetes/ok-staging-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ok-staging-ingress
spec:
  backend:
    serviceName: ok-staging-direct
    servicePort: 80
  tls:
  - secretName: ok-staging-cs61a-org-tls
